--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "stackmq-js-sdk",
-  "version": "1.0.0",
+  "name": "stackmq",
+  "version": "1.0.1",
   "description": "Tools for developers to implement real-time messaging",
   "main": "src/index.js",
   "scripts": {
