--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "types": "src/Stackmq.d.ts",
+  "files": [
+    "src",
+    "src/Stackmq.d.ts"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/stacknix/stackmq-js-sdk.git"
